# amos2022ss03-turtlebot-fleet-management

./: README.md  hello.service  hello_world.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-publish.yml
Deliverables/sprint-14/: project-summary.docx
Documentation/: Block.drawio  README.md
Documentation/misc/: design-doc-diagramm.drawio
FleetMgmnt/: Dockerfile  Shortest_distance.py  Test1.json  agv.py  autorecharge.py  collavoid.py  config.json  demo.vmap  dijkstra_search.py  docker-compose.yaml  globals.py  graph_search.py  main.py  mqtt.py  order.py  packet_receiver.py  recharge.py  requirements.txt  room_01253.vmap  room_04.150_round_track.vmap  room_04.150_simplified.vmap  shapeltest.py  test.json  test.py  turtlegraph.py  vda5050.py  vmap-importer.py  vmap_importer.py  webserver.py  worker.py
FleetMgmnt/WebUI/: Table.js  apidoc.txt  common.js  index.html  java.js  modal.html  starter-template.css  station.html  table.html
FleetMgmnt/maps/: Test1.vmap  room_04.150.vmap  room_04.150_curved.vmap  room_04.150_curved_old.vmap  room_04.150_new_coord.vmap  room_04.150_options.vmap
FleetMgmnt/models/: AGV.py  Edge.py  Node.py  Order.py  TurtleGraph.py
FleetMgmnt/simulation/: shapeltest.py  simulation.py  simulation1.py  simulation1.txt
TurtleBot/dev_ws/worker_node/: package.xml  setup.py
TurtleBot/dev_ws/worker_node/launch/: amos.launch.py  amos.launch.sh
TurtleBot/dev_ws/worker_node/worker_node/: map_client.py  worker.py
Turtlebot/src/worker_node/: package.xml  setup.cfg  setup.py
WebUI/: index.html  java.js
(+4 files in other folders)
